--- a/index.html
+++ b/index.html
@@ -1,1 +1,244 @@
-Hello World
+<!DOCTYPE HTML>
+<!--
+	Hyperspace by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Welcome to Yi's Portfolio</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<nav>
+						<ul>
+							<li><a href="#intro">Welcome</a></li>
+							<li><a href="#one">Projects</a></li>
+							<li><a href="#two">About Me</a></li>
+							<li><a href="#three">Get in touch</a></li>
+						</ul>
+					</nav>
+				</div>
+			</section>
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Intro -->
+					<section id="intro" class="wrapper style1 fullscreen fade-up">
+						<div class="inner">
+							<h1>Yi Chen's Portfolio</h1>
+							<p>Hi! I am Yi Chen and I am currently an undergraduate student at the University of Michigan. Here's my Portfolio. Feel free to ask me any questions you have!</p>
+							<ul class="actions">
+								<li><a href="#one" class="button scrolly">Learn more</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Projects -->
+					<section id="one" class="wrapper style2 spotlights">
+						<!-- LoZ -->
+						<section>
+							<a href="https://en.wikipedia.org/wiki/The_Legend_of_Zelda_(video_game)" target="_blank" class="image"><img src="images/LoZ.png" alt="The Legend of Zelda" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>The Legend of Zelda - Unity Remake</h2>
+									<p>Remade the first dungeon of a classic NES game -- The Legend of Zelda with a partner in EECS 494: Game Development at the University of Michigan.</p>
+									<ul class="actions">
+										<li><a href="https://drive.google.com/file/d/1gHw6lf8QN59-_VHLj6BitZCDygrVkV2B/view?usp=sharing" target="_blank" class="button">Click to Download</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<!-- Craft and Throw -->
+						<section>
+							<a href="#" class="image"><img src="images/CandT.png" alt="Craft and Throw" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Craft and Throw - Unity</h2>
+									<p>A rapid prototype game developed individually in EECS 494: Game Development at the University of Michigan.</p>
+									<ul class="actions">
+										<li><a href="https://drive.google.com/file/d/1Ko4PwKKNZFqjOibKcefLd9BNumHBTWjU/view?usp=sharing" target="_blank" class="button">Click to Download</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<!-- Polaroid -->
+						<section>
+							<a href="#" class="image"><img src="images/cover.png" alt="Polaroid" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Polaroid - Unity</h2>
+									<p>The final deliverable in EECS 494: Game Development at the University of Michigan. A game developed with a team of six and a student musician. Discover the story behind an abandoned factory, with a magical Polaroid.</p>
+									<ul class="actions">
+										<li><a href="https://drive.google.com/file/d/105EXuaT8DxIAhIf9TJ6Isht_vE_YtpZE/view?usp=sharing" target="_blank" class="button">Click to Download</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<!-- History paper -->
+						<section>
+							<a href="#" class="image"><img src="images/nanban.jpg" alt="Jesuits in Japan" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Christians in the Land of Samurais</h2>
+									<h3><i>Race, Tigers, Slavery, and Tea</i></h3>
+									<p>A research paper discusses the relations between Portuguese Jesuits and one of the most powerful figures in the sixteenth century Japan -- Toyotomi Hideyoshi. Written in History 497: History Colloquium at the Univerisity of Michigan.</p>
+									<ul class="actions">
+										<li><a href="Writing Example_Yi Chen.pdf" target="_blank" class="button">Click to view</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<!-- <section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Ultricies aliquam</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section> -->
+					</section>
+
+				<!-- Two -->
+					<section id="two" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>About Me</h2>
+							<p>I am a senior undergraduate student at the University of Michigan. I am double majoring in computer science and history. I love video games and interested in game development. I am longing to develop my own masterpiece in the future.</p>
+							<div class="features">
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h3>Computer Science Courses:</h3>
+									<p>EECS 494: Game Development and Design</p>
+									<p>EECS 482: Operating System</p>
+									<p>EECS 484: Database Management</p>
+									<p>EECS 481: Software Engineering</p>
+									<p>EECS 493: UI Development and Design</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-book"></span>
+									<h3>History Courses:</h3>
+									<p>Pre- and Post-modern East Asian History</p>
+									<p>US History</p>
+									<p>Post-Classical Ottoman History</p>
+									<p>Tsarist Russian History</p>
+								</section>
+								<!-- <section>
+									<span class="icon solid major fa-cog"></span>
+									<h3>Sed erat ullam corper</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-desktop"></span>
+									<h3>Veroeros quis lorem</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-link"></span>
+									<h3>Urna quis bibendum</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon major fa-gem"></span>
+									<h3>Aliquam urna dapibus</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section> -->
+							</div>
+							<ul class="actions">
+								<li><a href="Yi Chen_Resume.pdf" target="_blank" class="button">Click here for my resume</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style1 fade-up">
+						<div class="inner">
+							<h2>Get in touch</h2>
+							<p>Feel free to reach out via email!</p>
+							<div class="split style1">
+								<!-- <section>
+									<form method="post" action="#">
+										<div class="fields">
+											<div class="field half">
+												<label for="name">Name</label>
+												<input type="text" name="name" id="name" />
+											</div>
+											<div class="field half">
+												<label for="email">Email</label>
+												<input type="text" name="email" id="email" />
+											</div>
+											<div class="field">
+												<label for="message">Message</label>
+												<textarea name="message" id="message" rows="5"></textarea>
+											</div>
+										</div>
+										<ul class="actions">
+											<li><a href="" class="button submit">Send Message</a></li>
+										</ul>
+									</form>
+								</section> -->
+								<section>
+									<ul class="contact">
+										<!-- <li>
+											<h3>Address</h3>
+											<span>12345 Somewhere Road #654<br />
+											Nashville, TN 00000-0000<br />
+											USA</span>
+										</li> -->
+										<li>
+											<h3>Email</h3>
+											<a href="mail.google.com" target="_blank">chenyis@umich.edu</a>
+										</li>
+										<!-- <li>
+											<h3>Phone</h3>
+											<span>(000) 000-0000</span>
+										</li> -->
+										<li>
+											<h3>Social</h3>
+											<ul class="icons">
+												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li> -->
+												<li><a href="https://www.wechat.com/en/" target="_blank" class="icon brands fa-weixin"><span class="label">WeChat</span></a> SSer_Tree</li>
+												<li><a href="https://www.linkedin.com/in/yi-chen-8ab30719a/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+											</ul>
+										</li>
+									</ul>
+								</section>
+							</div>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Footer -->
+			<footer id="footer" class="wrapper style1-alt">
+				<div class="inner">
+					<ul class="menu">
+						<li>&copy; Yi Chen. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
