--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Yi Chen's Portfolio</h1>
-							<p>Hi! I am Yi Chen and I am currently an undergraduate student at the University of Michigan. Here's my Portfolio. Feel free to ask me any questions you have!</p>
+							<p>Hi! I am Yi Chen and I am currently a graduate student at the University of Southern California. Here's my Portfolio. Feel free to ask me any questions you have!</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -115,11 +115,11 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>I am a senior undergraduate student at the University of Michigan. I am double majoring in computer science and history. I love video games and interested in game development. I am longing to develop my own masterpiece in the future.</p>
+							<p>I am a graduate student of computer science at the University of Southern California. Back to my undergraduate study, I double majored in computer science and history at the University of Michigan. I love video games and interested in game development. I am longing to develop my own masterpiece in the future.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Computer Science Courses:</h3>
+									<h3>Computer Science Courses (University of Michigan):</h3>
 									<p>EECS 494: Game Development and Design</p>
 									<p>EECS 482: Operating System</p>
 									<p>EECS 484: Database Management</p>
@@ -156,7 +156,7 @@
 								</section> -->
 							</div>
 							<ul class="actions">
-								<li><a href="Yi Chen_Resume.pdf" target="_blank" class="button">Click here for my resume</a></li>
+								<li><a href="resume.pdf" target="_blank" class="button">Click here for my resume</a></li>
 							</ul>
 						</div>
 					</section>
@@ -198,7 +198,7 @@
 										</li> -->
 										<li>
 											<h3>Email</h3>
-											<a href="mail.google.com" target="_blank">chenyis@umich.edu</a>
+											<a href="mail.google.com" target="_blank">ychen477@usc.edu</a>
 										</li>
 										<!-- <li>
 											<h3>Phone</h3>
