--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
 									<p>EECS 484: Database Management</p>
 									<p>EECS 481: Software Engineering</p>
 									<p>EECS 493: UI Development and Design</p>
+									<h3>Game Development Courses (USC):</h3>
+									<p>CSCI 580: 3D Graphics and Rendering</p>
+									<p>CTIN 488: Game Design Workshop</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-book"></span>
@@ -156,7 +159,11 @@
 								</section> -->
 							</div>
 							<ul class="actions">
-								<li><a href="resume.pdf" target="_blank" class="button">Click here for my resume</a></li>
+								<li><a href="ChenYi_Resume.pdf" target="_blank" class="button">Click here for my resume</a></li>
+							</ul>
+							<ul class="actions">
+								<li><a href="ChenYi_Resume.pdf" target="_blank" class="button">Code Samples: Operating System Components</a></li>
+								<li><a href="ChenYi_Resume.pdf" target="_blank" class="button">Code Samples: C# Scripts of Polaroid</a></li>
 							</ul>
 						</div>
 					</section>
