--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 							</ul>
 							<ul class="actions">
 								<li><a href="ChenYi_Resume.pdf" target="_blank" class="button">Code Samples: Operating System Components</a></li>
-								<li><a href="C#_Sample.zip" target="_blank" class="button">Code Samples: C# Scripts of Polaroid</a></li>
+								<li><a href="Polaroid_Sample.zip" target="_blank" class="button">Code Samples: C# Scripts of Polaroid</a></li>
 							</ul>
 						</div>
 					</section>
