--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 								<li><a href="ChenYi_Resume.pdf" target="_blank" class="button">Click here for my resume</a></li>
 							</ul>
 							<ul class="actions">
-								<li><a href="ChenYi_Resume.pdf" target="_blank" class="button">Code Samples: Operating System Components</a></li>
+								<li><a href="OS_Sample.zip" target="_blank" class="button">Code Samples: Operating System Components</a></li>
 								<li><a href="Polaroid_Sample.zip" target="_blank" class="button">Code Samples: C# Scripts of Polaroid</a></li>
 							</ul>
 						</div>
