--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						</section>
 						<!-- Polaroid -->
 						<section>
-							<a href="#" class="image"><img src="images/cover.png" alt="Polaroid" data-position="25% 25%" /></a>
+							<a href="https://p0tatostudio.itch.io/polaroid" target="_blank" class="image"><img src="images/cover.png" alt="Polaroid" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Polaroid - Unity</h2>
