--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							</div>
 						</section>
 						<!-- Craft and Throw -->
-						<section>
+						<!--<section>
 							<a href="#" class="image"><img src="images/CandT.png" alt="Craft and Throw" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
@@ -66,6 +66,19 @@
 									<p>A rapid prototype game developed individually in EECS 494: Game Development at the University of Michigan.</p>
 									<ul class="actions">
 										<li><a href="https://drive.google.com/file/d/1Ko4PwKKNZFqjOibKcefLd9BNumHBTWjU/view?usp=sharing" target="_blank" class="button">Click to Download</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>-->
+						<!-- GGJ -->
+						<section>
+							<a href="https://globalgamejam.org/2022/games/journey-home-5" target="_blank" class="image"><img src="images/journey.png" alt="Journey to Home" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Global Game Jam 2022 - Journey to Home</h2>
+									<p>A 2D platformer game developed by a team of USC Games students at Global Game Jam 2022. Check out our GGJ website below!</p>
+									<ul class="actions">
+										<li><a href="https://globalgamejam.org/2022/games/journey-home-5" target="_blank" class="button">Link to the game</a></li>
 									</ul>
 								</div>
 							</div>
@@ -159,7 +172,7 @@
 								</section> -->
 							</div>
 							<ul class="actions">
-								<li><a href="ChenYi_Resume.pdf" target="_blank" class="button">Click here for my resume</a></li>
+								<li><a href="YiChen_Resume.pdf" target="_blank" class="button">Click here for my resume</a></li>
 							</ul>
 							<ul class="actions">
 								<li><a href="OS_Sample.zip" target="_blank" class="button">Code Samples: Operating System Components</a></li>
